--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,11 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.github.MFlisar:DragSelectRecyclerView:0.2'
+    compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
+}
+
+repositories {
+    //...
+    maven { url "https://jitpack.io" }
 }
 apply plugin: 'realm-android'
