--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".FilterActivity"/>
 
         <activity android:name=".splashScreen.SplashScreen">
             <intent-filter>
